# MemeFact

./: .gitignore  README.md  config.yaml  llms.txt  pyproject.toml  requirements.txt  run_experiments.py
.github/workflows/: ci_data_update.yml
config/: config.yaml  imkg.yaml  llm_judge_study.yaml  llm_selection_study.yaml  meta_study.yaml  prompts.yaml  x_bot.yaml
data/bot/dataset/: README.md
data/imkg/data/: kym.media.frames.csv  kym.parent.media.frames.csv  kym.seed.children.media.frames.csv  kym.seed.media.frames.tags.enrichment.json  kym.seed.media.frames.textual.enrichment.json  (+4 more)
data/raw/: meme_images_20240920_124503.csv  politifact_us_presi_elections2024_20240917_173046.csv
docs/: progress_tracker.md  requirements.md
llm_judge/: llm_judge_study.py
llm_judge/data/: claims.csv  examples_ratings.csv  meme_urls.json
llm_judge/notebook/: analysis_1.ipynb
llm_selection/: claims.txt  llm_selection_study.py  memes_selected.txt
llm_selection/data/: claims_meta_study.csv  worst_best_memes.csv  worst_best_memes_with_dimensions.csv
llm_selection/notebooks/: comparison_memes.ipynb  dem_data.ipynb  postselection_data.ipynb  preselection_data.ipynb
meta_study/data/: dataset_meta_study.csv
meta_study/notebook/: corrections.ipynb  demographics.ipynb  files_processing.ipynb  i-panas-sf.ipynb
src/: __init__.py  meme_fact.py  run_meme_fact.py
src/bot/: README.md  __init__.py  logger.py  scheduler.py  scrape_x.py  x.py
src/data/: __init__.py  csv.py  img_flip_memes.py  make_dataset.py  schemas.py  scrape_politifact.py  virality_dataset.py
src/models/: __init__.py  hmd.py  model.py  model_manager.py  model_wrapper.py  prompt.py
src/modules/: __init__.py  debate_manager.py  module1_input.py  module2_selection.py  module3_generation.py  module4_concatenation.py  module5_moderation.py
src/rag/: __init__.py  knowledge_graph.py  pipeline.py  testing.py  vector_db.py
src/utils/: __init__.py  helpers.py  img_flip_api.py  input_parser.py  validators.py  x_api.py
src/variants/: __init__.py  baseline.py  debate.py  rag.py  rlhf.py
src/visualization/: __init__.py
x_bot_study/data/: x_bot_data.csv  x_bot_data_phase1.csv
x_bot_study/notebooks/: analysis.ipynb  processing.ipynb
(+57 files in other folders)
