[tool.poetry]
name = "memefact"
version = "0.1.0"
description = "AI system generating memes as alternative explanations to traditional fact-checking text-based explanations"
authors = ["Sérgio Pinto <sergio.g.pinto@tecnico.ulisboa.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.45.1"
openai = "^1.50.0"
google-generativeai = "^0.8.2"
anthropic = "^0.34.2"
torch = "^2.4.1"
torchvision = "^0.19.1"
python-twitter-v2 = "^0.9.1"
requests-oauthlib = "^2.0.0"
schedule = "^1.2.2"
tenacity = "^9.0.0"
playwright = "^1.47.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
