[tool.poetry]
name = "memefact"
version = "0.1.0"
description = "AI system generating memes as alternative explanations to traditional fact-checking text-based explanations"
authors = ["Sérgio Pinto <sergio.g.pinto@tecnico.ulisboa.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.45.1"
openai = "^1.50.0"
google-generativeai = "^0.8.2"
anthropic = "^0.34.2"
torch = "^2.4.1"
torchvision = "^0.19.1"
python-twitter-v2 = "^0.9.1"
requests-oauthlib = "^2.0.0"
schedule = "^1.2.2"
tenacity = "^9.0.0"
playwright = "^1.47.0"
huggingface-hub = "^0.25.2"
rdflib = "^7.1.1"
chromadb = "^0.5.20"
googlesearch-python = "^1.2.5"
spellchecker = "^0.4"
language-tool-python = "^2.8.1"
wordsegment = "^1.3.1"
symspellpy = "^6.7.8"
numpy = "<2.0"
tiktoken = "^0.8.0"
llama-cpp-python = "^0.3.2"
wordcloud = "^1.9.4"
seaborn = "^0.13.2"
plotly = "^5.24.1"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
